ecmascript/parser/tests/test262-error-references/fail/8b1bf74ad28fc10c.js.stderr
error: Identifier cannot follow number
 --> $DIR/tests/test262-parser/fail/8b1bf74ad28fc10c.js:1:3
  |
1 | 01a
  |   ^

